# body-progress-tracker

./: .gitignore  README.md  align_photos.py  data.example.json  index.html  ingest.sh  pyproject.toml  requirements.txt
body_align/: __init__.py  align.py  cli.py  compare.py  models.py  timelapse.py  verify.py
tests/: test_align.py
